--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 *.class
 =======
 # Compiled class file
@@ -23,4 +22,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
->>>>>>> 652cc92584b22c352b3c59c50cd4677aaf98bdf8
+
+#c++
+*.out
